writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/undeclared_fun.c
int main(void) {
  
    return foo(3);
}

int foo(int a) {
    return 1;
}